--- a/css/vars.css
+++ b/css/vars.css
@@ -9,11 +9,11 @@
     --page-color: #FFEBC9;
     --text-color: black;
 
-    --header-color-from-dark: #3c1063;
+    --header-color-from-dark: #411d61;
     --header-color-to-dark: #2d1246;
-    --bg-color-from-dark: #0a2b5f;
-    --bg-color-to-dark: #081c3b;
-    --page-color-dark: #612310;
+    --bg-color-from-dark: #1e365c;
+    --bg-color-to-dark: #17263d;
+    --page-color-dark: #643628;
     --page-border-color-dark: #5795ff;
     --text-color-dark: #ffe3ae;
     --link-color-dark: #9492ff;
